# wormhole

./: .dockerignore  .editorconfig  .env.coolify.example  .gitignore  DEPLOYMENT_CHECKLIST.md  README.md  SAAS_INTEGRATION_PLATFORM_CHECKLIST.md  docker-compose.prod.yml  docker-compose.yml
api/: .dockerignore  .env.example  .eslintrc.cjs  Dockerfile  package-lock.json  package.json  vitest.config.ts
docs/: ARCHITECTURE_STORAGE.md  CONTRIBUTING.md  CONVENTIONS.md  DEPLOYMENT_COOLIFY.md  OBSERVABILITY.md  PART_10_TESTING_STRATEGY.md  PART_11_SECURITY_SPECIFICATION.md  PART_12_CONNECTOR_APP_SDK_STRATEGY.md  PART_13_PERFORMANCE_SCALE_AND_CAPACITY_PLANNING.md  PART_14_WHAT_IT_TAKES_TO_BUILD.md  PART_15_BUILD_ORDER.md  PART_16_RISKS_AND_MITIGATION.md  PART_1_PRODUCT_SCOPE_AND_SUCCESS_CRITERIA.md  PART_2_1_TENANCY_USERS_ACCESS.md  PART_2_2_APPS_CONNECTOR_DEFINITIONS.md  PART_2_3_ACTIONS_ENDPOINTS_OPERATIONS.md  PART_2_4_CONNECTIONS_CREDENTIALS.md  PART_2_5_WORKFLOWS.md  PART_2_6_TRIGGERS.md  PART_2_7_EXECUTION_AND_RUNS.md  PART_3_NON_FUNCTIONAL_REQUIREMENTS.md  PART_4_1_FRONTEND.md  PART_4_2_CONTROL_PLANE_API.md  PART_4_3_EXECUTION_PLANE.md  PART_4_4_MESSAGING_AND_STORAGE.md  PART_7_API_SURFACE.md  (+4 more)
runner/: .env.example  README.md  pyproject.toml
runner/src/runner/: __init__.py  config.py  main.py  reporting.py  retry.py
runner/src/runner/actions/: __init__.py  auth_adapters.py  http_client.py
runner/src/runner/execution/: __init__.py  engine.py  step_runner.py
runner/src/runner/mapping/: __init__.py  template.py
runner/tests/: __init__.py  test_mapping.py
(+77 files in other folders)
